changed link style, prevent overflow in posts

--- a/sd/static/sd/style.css
+++ b/sd/static/sd/style.css
@@ -50,6 +50,7 @@ h5 {
 p {
   font-style: normal;
   font-size: 1em;
+  word-wrap: break-word
 }
 
 ul {
@@ -59,7 +60,9 @@ ul {
 
 /* links */
  a {
-  text-decoration: none;
+  text-decoration: underline;
+  color: black;
+
 
 }
 
